# ML-portfolio

./: .gitattributes  .gitignore  LICENSE  README.md  requirements-dev.txt  requirements.txt
.github/workflows/: ci-end2end-churn.yml  ci-rag-pipeline.yml.disabled  ci.yml
end2end_churn/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  serve.py  setup.ps1  setup.sh  test_request.json  test_schema_alignment.py  train.py
end2end_churn/config/: prod.yaml  train_config.yaml  train_config_quick.yaml
end2end_pipe/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.sample.json  constraints.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
end2end_pipe/infra/: prometheus.yml
end2end_pipe/src/ml_portfolio_churn/: __init__.py  constants.py  convert_arff_to_csv.py  data_io.py  drift.py  features.py  main.py  service.py
end2end_pipe/tests/: test_cli_smoke.py  test_drift_detection.py  test_schema_alignment.py  test_service_validation.py  test_split_data.py  test_threshold_tuning.py  test_train_smoke.py
rag_pipeline/: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  SUMMARY.txt  docker-compose.yml  docker-entrypoint.sh  main.py  requirements-dev.txt  requirements.txt  setup.ps1  setup.sh  setup_log.txt
src/: convert_arff_to_csv.py  main.py
tests/: test_split_data.py  test_train_smoke.py
(+177 files in other folders)
